...
        exerciseId: 'Barbell_Full_Squat',
        exerciseName: 'Barbell Full Squat',
        sets: normalSets(3, 8),
      },
      {
        exerciseId: 'Barbell_Bench_Press_-_Medium_Grip',
        exerciseName: 'Barbell Bench Press - Medium Grip',
        sets: normalSets(3, 8),
      },
      {
        exerciseId: 'Bent_Over_Barbell_Row',
        exerciseName: 'Bent Over Barbell Row',
        sets: normalSets(3, 10),
...
