appId: dev.bishnoi.forgelog.mobile
tags:
  - migration
---
- launchApp
- runFlow:
    when:
      visible: "Pixel Launcher isn't responding"
    commands:
      - tapOn: "Close app"
- extendedWaitUntil:
    visible: "Workout"
    timeout: 60000
- tapOn:
    point: "50%,96%"
- extendedWaitUntil:
    visible: "New Routine"
    timeout: 60000
- tapOn:
    point: "83%,96%"
- extendedWaitUntil:
    visible: "Personal Records"
    timeout: 60000
- assertVisible: "Barbell Bench Press - Medium Grip"
- assertVisible: "Max weight"
